clusters/vps1/config/firezone/firezone-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: firezone
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
