clusters/vps1/config/firezone/firezone-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firezone
  namespace: firezone
  labels:
    app: firezone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firezone
  template:
    metadata:
      labels:
        app: firezone
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.ip_forward
            value: "1"
          - name: net.ipv6.conf.all.forwarding
            value: "1"
      containers:
      - name: firezone
        image: firezone/firezone:latest
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - SYS_MODULE
        ports:
          - name: http
            protocol: TCP
            containerPort: 13000
          - name: wireguard
            protocol: UDP
            containerPort: 51820
        volumeMounts:
          - name: data
            mountPath: /var/firezone
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: firezone-data
