clusters/vps1/config/firezone/postgresql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: firezone
  labels:
    app: firezone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firezone
  template:
    metadata:
      labels:
        app: firezone
    spec:
      containers:
      - name: postgresql
        image: postgres:16
        ports:
          - name: sql
            protocol: TCP
            containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgresql-data
