clusters/vps1/config/firezone/firezone-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firezone
  namespace: firezone
  labels:
    app: firezone
spec:
  type: ClusterIP
  selector:
    app: firezone
  ports:
    - name: http
      protocol: TCP
      port: 13000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: firezone-wireguard
  namespace: firezone
  labels:
    app: firezone
spec:
  type: LoadBalancer
  selector:
    app: firezone
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: wireguard
