clusters/vps1/config/firezone/firezone-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: firezone
  namespace: firezone
spec:
  hostnames:
  - vpn.jkulzer.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: firezone
      port: 13000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
